k8s/overlays/prod/backend-patch.yaml
# k8s/overlays/prod/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: learnaws
spec:
  replicas: 2
