k8s/overlays/prod/frontend-patch.yaml
# k8s/overlays/prod/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: learnaws
spec:
  replicas: 2
